<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001111">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/v21_remote"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ir_remote"
            android:textColor="#AAAAAA"
            android:layout_marginBottom="20dp"/>

        <!-- Grid -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <!-- Card 1 -->
            <LinearLayout
                android:id="@+id/btnTV"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:background="@drawable/card_ripple"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv"
                    android:fontFamily="@font/organix"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- Card 2 -->
            <LinearLayout
                android:id="@+id/btnAC"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:background="@drawable/card_ripple"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ac"
                    android:fontFamily="@font/organix"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- Card 3 -->
            <LinearLayout
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:background="@drawable/card_ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/home_theater"
                    android:fontFamily="@font/organix"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/home_"/>
            </LinearLayout>

            <!-- Card 4 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:background="@drawable/card_ripple"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_top_box"
                    android:fontFamily="@font/organix"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>
            </LinearLayout>

        </GridLayout>

    </LinearLayout>
</ScrollView>